--- a/src/app/pages/movie-list-new/movie-list-new.component.html
+++ b/src/app/pages/movie-list-new/movie-list-new.component.html
@@ -10,7 +10,7 @@
       class="p-2 text-white bg-zinc-900 shadow w-full rounded"
     >
       <a
-        [routerLink]="['/movie-detail', movie.slug]"
+        [routerLink]="['/phim', movie.slug]"
         class="block cursor-pointer"
       >
         <img
