--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,6 +13,10 @@
   <div class="md:col-span-10">
     <app-movie-banner></app-movie-banner>
     <app-movie-list-animation></app-movie-list-animation>
+<div class="fb-comments-container bg-black p-4    w-full max-w-xs md:max-w-full overflow-auto mt-4">
+  <div class="fb-comments" data-href="http://animevietsub.tv" data-width="100%" data-numposts="4"></div>
+</div>
+
   </div>
 
   <!-- Bên phải: nằm dưới ở mobile, hẹp hơn ở desktop -->
