--- a/src/app/pages/movie-list-animation/movie-list-animation.component.html
+++ b/src/app/pages/movie-list-animation/movie-list-animation.component.html
@@ -1,31 +1,62 @@
-<div class="p-4 bg-black text-white ">
+<div class="p-4 bg-black text-white h-auto">
     <!-- Tiêu đề -->
-    <h2 class="text-2xl font-bold mb-4">🎬 Anime</h2>
-    <p-carousel [value]="movies" [numVisible]="7" [numScroll]="1" [circular]="true" [autoplayInterval]="3000"
-        [responsiveOptions]="responsiveOptions" styleClass="custom-carousel">
-      <ng-template let-movie pTemplate="item">
-    <div class="p-2 text-white bg-black shadow hover:scale-105 transition w-[180px]">
-        <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
-            <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" 
-                [alt]="movie.name"
-                loading="lazy"
-                class="w-full h-60 object-cover rounded" />
-            <div class="p-2">
-                <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
-                <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
-                <div class="space-x-2 mt-1">
-                    <p class="inline-block bg-gray-300 text-gray-600 text-xs px-2 py-1 rounded">
-                        {{ movie.category[0]?.name }}
-                    </p>
-                    <p class="inline-block bg-gray-300 text-gray-600 text-xs px-2 py-1 rounded">
-                        {{ movie.year }}
-                    </p>
-                </div>
-            </div>
-        </a>
-    </div>
-</ng-template>
+    <h2 class="text-xl font-bold mb-4">
+        <img src="assets/icon/tv_show.gif" alt="Anime Icon" class="inline-block w-10 h-10  mr-2">
 
-    </p-carousel>
+        Anime
+    </h2>
+    <!-- Container cuộn -->
+    <div class="scrollbar-hide overflow-y-auto max-h-[700px] pr-1">
+       
+<div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4 mt-4 p-4 bg-black min-h-[70vh]">
+  <!-- Skeleton loading -->
+  <ng-container *ngIf="isLoading; else movieList">
+    <div *ngFor="let i of [].constructor(12)" class="animate-pulse bg-gray-800 rounded p-3">
+      <div class="h-40 bg-gray-700 rounded mb-2"></div>
+      <div class="h-3 bg-gray-700 rounded w-3/4 mb-1"></div>
+      <div class="h-3 bg-gray-700 rounded w-1/2 mb-2"></div>
+      <div class="flex gap-2">
+        <div class="h-4 w-10 bg-gray-700 rounded"></div>
+        <div class="h-4 w-10 bg-gray-700 rounded"></div>
+      </div>
+    </div>
+  </ng-container>
+
+  <ng-template #movieList>
+    <div *ngFor="let movie of paginatedMovies" class="text-white bg-zinc-900 shadow rounded overflow-hidden hover:scale-105 transform transition">
+      <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
+        <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
+          class="w-full h-40 object-cover" />
+        <div class="p-2">
+          <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
+          <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
+        </div>
+        <div class="space-x-2 px-2 py-2">
+          <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
+            {{ movie.category[0]?.name }}
+          </span>
+          <span class="inline-block bg-gray-300 text-gray-600 text-[10px] px-2 py-1 rounded">
+            {{ movie.year }}
+          </span>
+        </div>
+      </a>
+    </div>
+  </ng-template>
+        </div>
+
+    </div>
+    <!-- Pagination -->
+    <div class="flex justify-center items-center gap-2 mt-4">
+        <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 1"
+            class="px-3 py-1 bg-gray-700 text-white rounded disabled:opacity-50">Trước</button>
+
+        <ng-container *ngFor="let page of [].constructor(totalPages); let i = index">
+            <button (click)="changePage(i + 1)" [class.bg-red-600]="currentPage === i + 1"
+                class="px-3 py-1 bg-gray-700 text-white rounded">{{ i + 1 }}</button>
+        </ng-container>
+
+        <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages"
+            class="px-3 py-1 bg-gray-700 text-white rounded disabled:opacity-50">Sau</button>
+    </div>
 
 </div>
