--- a/src/app/pages/movie-list-new/movie-list-new.component.html
+++ b/src/app/pages/movie-list-new/movie-list-new.component.html
@@ -1,24 +1,17 @@
 <div class="p-4 bg-black text-white h-full">
   <!-- Tiêu đề -->
-  <h2 class="text-xl font-bold mb-4">🎬 Phim Mới</h2>
+<div class="flex items-center justify-center mb-4">
+  <img src="assets/icon/new_icon.gif" alt="Anime Icon" class="w-10 h-10 mr-2">
+  <h2 class="text-xl font-bold">Phim Mới</h2>
+</div>
+
   <!-- Container cuộn -->
   <div class="scrollbar-hide overflow-y-auto max-h-[700px] pr-1">
-    <div
-      class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-1 gap-4"
-    >
-      <div
-        *ngFor="let movie of movies | slice:0:10"
-        class="text-white bg-zinc-900 shadow rounded overflow-hidden"
-      >
-        <a
-          [routerLink]="['/phim', movie.slug]"
-          class="block cursor-pointer"
-        >
-          <img
-            [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url"
-            [alt]="movie.name"
-            class="w-full h-40 object-cover"
-          />
+    <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-1 gap-4">
+      <div *ngFor="let movie of movies | slice:0:10" class="text-white bg-zinc-900 shadow rounded overflow-hidden">
+        <a [routerLink]="['/phim', movie.slug]" class="block cursor-pointer">
+          <img [src]="'https://img.ophim.live/uploads/movies/' + movie.thumb_url" [alt]="movie.name"
+            class="w-full h-40 object-cover" />
           <div class="p-2">
             <h3 class="text-sm font-semibold truncate">{{ movie.name }}</h3>
             <p class="text-xs text-gray-400 truncate">{{ movie.origin_name }}</p>
